plugins {
	id 'org.springframework.boot' version '2.6.4'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
}

group = 'io.github'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '16'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
}

subprojects {
	group 'io.github'
	version '1.0'

	apply plugin: 'java'
	apply plugin: 'io.spring.dependency-management'
	apply plugin: 'org.springframework.boot'

	sourceCompatibility = 16

	repositories {
		mavenCentral()
	}

	dependencies {
		compileOnly 'org.projectlombok:lombok'
		annotationProcessor 'org.projectlombok:lombok'
		testImplementation 'org.springframework.boot:spring-boot-starter-test:2.6.4'
		testImplementation 'org.assertj:assertj-core:3.22.0'
		implementation 'io.sentry:sentry-spring-boot-starter:6.4.1'
		implementation 'io.sentry:sentry-logback:6.4.1'
	}
}

springBoot {
	mainClass = 'io.github.V1ServiceApplicationApplication'
}

tasks.named('test') {
	useJUnitPlatform()
}

jar {
	enabled = false
}